2004-07-08  Dan Winship  <danw@novell.com>

	* libsoup/soup-soap-response.c: Revert previous change for now; it
	breaks the build on distros with older libxmls.

2004-07-08  Dan Winship  <danw@novell.com>

	* tests/dict.c: Basic SOAP test, using Aonaware's SOAP->DICT
	gateway

2004-07-07  Fernando Herrera  <fherrera@onirica.com>

	* libsoup/soup-soap-response.c: (finalize), (init),
	(soup_soap_response_from_string): Use a parse context for the
	xml document, so we can safely use the option to ignore
	blank spaces and '\n'.

2004-07-06  Dan Winship  <danw@novell.com>

	* libsoup/soup-uri.c (soup_uri_new_with_base): if the protocol is
	http or https, require a hostname. For #61049

	* tests/uri-parsing.c (rel_tests, do_uri): Update for that

2004-06-03  JP Rosevear <jpr@novell.com>

	* configure.in: bump version to 2.1.11, libtool number

2004-06-01  Dan Winship  <danw@novell.com>

	* libsoup/soup-address.c: Redo the various IPv4/IPv6-abstracting
	macros to not use ?: expressions as lvalues, since that's
	apparently a GNU extension.
	(soup_address_resolve_async): Use a timeout rather than an idle
	handler to poll the dns result. (soup-dns really should be
	rewritten to not require polling, but this is easier for now.)
	#59240

	* libsoup/soup-server.c (call_handler): Don't use GNU-only
	non-constant structure initialization

	* tests/dns.c: Simple test of the dns code

	* tests/Makefile.am (noinst_PROGRAMS): build it

2004-05-19  JP Rosevear  <jpr@novell.com>

	* configure.in (SOUP_API_VERSION): bump version, libtool numbers

2004-05-18  Dan Winship  <danw@novell.com>

	* libsoup/soup-ssl.h:
	* libsoup/soup-nossl.c: define some GError codes and stuff

	* libsoup/soup-gnutls.c: add missing #include <gnutls/x509.h>
	(do_handshake): when returning G_IO_STATUS_AGAIN, set the GError
	to SOUP_SSL_ERROR_HANDSHAKE_NEEDS_READ or _NEEDS_WRITE
	appropriately.

	* libsoup/soup-socket.c (soup_socket_write): Handle
	SOUP_SSL_ERROR_HANDSHAKE_NEEDS_READ, by setting an io watch for