@@ -8,5 +8,5 @@ Name: libsoup
 Description: a glib-based HTTP library
 Version: @VERSION@
 Requires: glib-2.0
-Libs: -L${libdir} -lsoup-${SOUP_API_VERSION} @LIBGNUTLS_LIBS@
-Cflags: -I${includedir}/libsoup-${SOUP_API_VERSION}
+Libs: -L${libdir} -lsoup-${SOUP_API_VERSION} @LIBGNUTLS_LIBS@ @XML_LIBS@
+Cflags: -I${includedir}/libsoup-${SOUP_API_VERSION} @XML_CFLAGS@
